--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "parcel-project-template",
+  "name": "swat-test",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Krenichniy.github.io/swat-test",
+  "homepage": "https://anastasiialav.github.io/swat-test/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /swat-test/"
